# finances_reporting

./: .gitignore  Makefile  README.md  download_binance.py  extract_provincial.py  pyproject.toml
.github/workflows/: ci.yml
docs/: PRD.md  roadmap.md
docs/ADR/: ADR-001-sqlite-source-of-truth.md  ADR-002-double-entry-transfers.md  ADR-003-earn-positions-table.md  ADR-004-csv-backfill-strategy.md  ADR-005-rate-resolution-priority.md  ADR-006-category-taxonomy-revamp.md  ADR-007-bcv-automated-scrape.md  ADR-008-cash-usd-only-cli.md  ADR-009-pydantic-for-normalization.md  ADR-010-idempotent-reingestion.md  ADR-011-tdd-discipline-and-testing-stack.md
docs/architecture/rules/: rule-001-no-direct-sheets-writes.md  rule-002-transfers-must-be-paired.md  rule-003-earn-position-source.md  rule-004-backfill-uses-production-ingest.md  rule-005-single-rate-resolver.md  rule-006-categorization-pipeline.md  rule-007-bcv-scrape-failure-mode.md  rule-008-cash-account-scope.md  rule-009-pydantic-at-boundaries.md  rule-010-deterministic-source-ref.md  rule-011-tdd-discipline.md
finances/: config.py
finances/cli/: main.py
finances/db/: connection.py  migrate.py
finances/db/migrations/: 001_initial.sql  002_seed_categories.sql  003_add_dating_gifts_categories.sql  004_taxonomy_v1_1.sql  005_add_clothing_category.sql  006_prune_ambiguous_rules.sql
finances/db/repos/: __init__.py  accounts.py  categories.py  import_state.py  positions.py  rates.py  transactions.py
finances/domain/: categorization.py  earn.py  models.py  rates.py  reconciliation.py  transfers.py
finances/ingest/: bcv.py  binance.py  cash_cli.py  p2p_rates.py  provincial.py
finances/migration/: backfill.py  interactive_cleanup.py
finances/reports/: balances.py  consolidated_usd.py  monthly.py  needs_review.py  sheets_sync.py
legacy/: download_binance.py  extract_bcv.py  extract_provincial.py  main.py
prompts/: fill-cleanup-categories.md
scripts/: export_category_mapping.py
tests/: conftest.py  test_cash_cli.py  test_categorization.py  test_db_coverage_gaps.py  test_db_schema.py  test_earn.py  test_ingest_bcv.py  test_ingest_binance.py  test_ingest_p2p_rates.py  test_ingest_provincial.py  test_migration_backfill.py  test_migration_cleanup.py  test_rates.py  test_reports_balances.py  test_reports_consolidated_usd.py  test_reports_monthly.py  test_reports_needs_review.py  test_reports_sheets_sync.py  test_smoke_property.py  test_transfers.py
tests/fixtures/: bcv_mangled.html  bcv_snapshot.html
tests/fixtures/backfill/: Finanzas - BCV.csv  Finanzas - Binance.csv  Finanzas - Provincial.csv
tests/integration/: test_pipeline.py
tests/integration/fixtures/: bcv_snapshot.html  p2p_response.json  p2p_response_buy.json  p2p_response_sell.json  provincial.csv
tests/integration/fixtures/binance_api/: deposits.json  earn_positions.json  earn_rewards.json  internal_transfers_funding_to_main.json  internal_transfers_main_to_funding.json  p2p_sells.json
