[project]
name = "finances-reporting"
version = "0.1.0"
description = "Personal finances ledger: SQLite source of truth with CLI ingest and Sheets mirror."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "binance-connector>=3.12.0",
    "bs4>=0.0.2",
    "google-auth>=2.30",
    "gspread>=6",
    "httpx>=0.27",
    "pandas>=2.3.3",
    "pydantic>=2.7",
    "python-dotenv>=1.2.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
finances = "finances.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finances"]
